fix: swich case statement

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ spring:
     defer-datasource-initialization: true
     properties:
       hibernate:
-        enable_lazy_load_no_trans : true
+        enable_lazy_load_no_trans: true
   sql:
     init:
       mode: always
@@ -23,7 +23,9 @@ spring:
     multipart:
       max-request-size: 20MB
       max-file-size: 20MB
-
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
 
 telegram_bot_username: sharp_0706_bot
 telegram_bot_botToken: 5262928944:AAE9u_A7V-hzmoIjyih7KITN0vPvolfx5-w
